flowlog-build/tests/errors/parser/duplicate_extern_fn.dl
.extern fn hash(x: int64) -> int64
.extern fn hash(y: int64) -> int64
